# veda_linux

./: README.md  main.c
client/: CMakeLists.txt
client/include/: client.h
client/src/: httpClient.c  main.c  parsing.c
include/: httpserver.h
lib/: CMakeLists.txt  httpserver.c
server/: CMakeLists.txt  main.c
server/http/: CMakeLists.txt  controller.c  httpserver.c
server/include/: buzz.h  buzzController.h  controller.h  dynload.h  dynload_cjson.h  fnd.h  httpobject.h  httpserver.h  led.h  ledController.h  linkedList.h  peripheral.h  yl40.h
server/indicators/: CMakeLists.txt  led.c
server/led/: CMakeLists.txt
server/lib/: httpserver.c
server/libs/data_structure/: CMakeLists.txt  linkedList.c
server/libs/http/: CMakeLists.txt  httpserver.c
server/libs/indicators/: CMakeLists.txt  buzz.c  fnd.c  led.c
server/libs/sensors/: CMakeLists.txt  yl40.c
server/src/: buzzController.c  controller.c  dynload.c  ledController.c  main.c
